Fix before-after slider image cropping on services page
Remove fixed aspect-ratio:4/5 and overflow:hidden from .before-after so
images display at their natural proportions. Also change coloured-slider
height from 100% to auto so it doesn't stretch to a phantom container height.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -392,7 +392,7 @@ img {
 .coloured-slider {
     /* outline: 2px solid #dcdfff; */
     width : 100%;
-    height: 100% !important;
+    height: auto !important;
     outline: 0;
 }
 
